--- a/src/app/pages/dashboard-project/dashboard-project.component.html
+++ b/src/app/pages/dashboard-project/dashboard-project.component.html
@@ -272,7 +272,10 @@
       </li> -->
       <!--end::Nav item-->
       <!--begin::Nav item-->
-      <li class="nav-item">
+	  <li class="nav-item">
+        <a class="nav-link text-active-primary py-5 me-6" (click)="setActive('descargables')" [ngClass]="{'active': activeClass  == 'descargables'}" routerLink="descargables">Descargables</a>
+      </li> 
+	  <li class="nav-item">
         <a class="nav-link text-active-primary py-5 me-6" (click)="setActive('settings')" [ngClass]="{'active': activeClass  == 'settings'}" routerLink="settings" *ngIf="rol == 'Decisor'">Ajustes</a>
       </li>
       <!--end::Nav item-->
