--- a/src/app/pages/decision/decision.component.scss
+++ b/src/app/pages/decision/decision.component.scss
@@ -27,6 +27,21 @@
   margin: 10px;
 }
 
+.contenedor-imagen-exhibicion{
+  width: 100%;
+  height: 600px;
+  float: left;
+  margin-left: 10px;
+  margin-top: 10px;
+  position: relative;
+  cursor: auto;
+}
+
+.imagen-exhibicion{
+  width: 100%;
+  height: 100%;
+}
+
 .caja-nota{
   outline: none;
   overflow: auto;
