--- a/src/app/pages/exhibicion/exhibicion.component.html
+++ b/src/app/pages/exhibicion/exhibicion.component.html
@@ -109,8 +109,8 @@
     </div>-->
     <div style="width: 50%;float: left;">
     <ng-container *ngFor="let img_u of recursos; let i3 = index;">
-      <div class="contenedor-imagen">
-      <img class="imagen-usuario" src="{{img_u.secure_url}}"/>
+      <div class="contenedor-imagen-exhibicion">
+      <img class="imagen-exhibicion" src="{{img_u.secure_url}}"/>
       </div>
     </ng-container>
     </div>
