--- a/src/app/pages/principal/principal.component.scss
+++ b/src/app/pages/principal/principal.component.scss
@@ -1,7 +1,7 @@
 // VIDEO
 .fondo-video{
   background-color: black;
-  height: 1125px;
+  height: 100vw;
   width: 100%;
   position: absolute;
   margin: -1140px 0 0 0;
@@ -12,7 +12,8 @@
   text-align: center;
   position: absolute;
   width: 100%;
-  margin: -1110px 0px 0px 0;
+  /*margin: -1110px 0px 0px 0;*/
+  top: 20px;
 
   video{
     border-radius: 10px;
@@ -23,6 +24,15 @@
 
 }
 //VIDEO ENDS
+
+.symbol-auto{
+  width: auto !important;
+  margin-right: 20px !important;
+}
+.symbol-label2{
+  width: auto !important;
+  padding: 0px 10px 0px 10px !important;
+}
 
 .title-container{
   width: 100%;
@@ -516,3 +526,233 @@
       }
     }
   }
+
+/*nuevo diseño*/
+/*Activo*/
+.container-new {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 80px;
+}
+
+.container-new .card{
+    position: relative;
+    width: 300px;
+    height: 400px;
+    background: var(--clr);
+    border-radius: 20px;
+    border-top-left-radius: 70px;
+    overflow: hidden;
+}
+
+.container-new .card .box {
+    position: absolute;
+    inset: 10px;
+    background-color: #282828;
+    border-radius: 10px;
+}
+
+.container-new .card .box .icon {
+    position: absolute;
+    width: 140px;
+    height: 140px;
+    background: var(--clr);
+    border-bottom-right-radius: 50%;
+}
+
+.container-new .card .box .icon::before{
+    content: '';
+    position: absolute;
+    bottom: -30px;
+    left: 0;
+    width: 30px;
+    height: 30px;
+    background: transparent;
+    border-top-left-radius: 30px;
+    box-shadow: -5px -5px 0 5px var(--clr);
+}
+
+.container-new .card .box .icon::after{
+    content: '';
+    position: absolute;
+    right: -30px;
+    top: 0;
+    width: 30px;
+    height: 30px;
+    background: transparent;
+    border-top-left-radius: 30px;
+    box-shadow: -5px -5px 0 5px var(--clr);
+}
+
+.container-new .card .box .icon .iconBox{
+    position: absolute;
+    inset: 10px;
+    background: #282828;
+    color: #fff;
+    border-radius: 50%;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 600;
+}
+
+.container-new .card .box .icon .iconBox ion-icon{
+    font-size: 4em;
+    color: #fff;
+    --ionicon-stroke-width: 16px;
+}
+
+.container-new .card .box .content{
+    position: absolute;
+    top: 150px;
+    text-align: center;
+    padding: 20px;
+}
+
+.container-new .card .box .content h3{
+    color: #fff;
+    font-size: 1.35em;
+    text-transform: uppercase;
+    font-weight: 700;
+    letter-spacing: 0.12em;
+}
+
+.container-new .card .box .content p{
+    color: #fff;
+    font-size: 0.95em;
+    opacity: 0.75;
+    margin: 0 0 10px;
+}
+
+.container-new .card .box .content a{
+    background: var(--clr);
+    display: inline-block;
+    padding: 10px 25px;
+    text-decoration: none;
+    color: #333;
+    text-transform: uppercase;
+    font-weight: 600;
+    border-radius: 10px;
+    transition: 0.5s;
+    cursor: pointer;
+}
+
+.container-new .card .box .content a:hover {
+    letter-spacing: 0.25em;
+}
+/*Fin activo*/
+
+/*Inicio Inactivo*/
+.container-new .card-inactiva{
+  position: relative;
+  width: 300px;
+  height: 400px;
+  background: #7c7c7c !important;
+  border-radius: 20px;
+  border-top-left-radius: 70px;
+  overflow: hidden;
+}
+
+.container-new .card-inactiva .box {
+    position: absolute;
+    inset: 10px;
+    background-color: #282828;
+    border-radius: 10px;
+}
+
+.container-new .card-inactiva .box .icon {
+    position: absolute;
+    width: 140px;
+    height: 140px;
+    background: #7c7c7c !important;
+    border-bottom-right-radius: 50%;
+}
+
+.container-new .card-inactiva .box .icon::before{
+    content: '';
+    position: absolute;
+    bottom: -30px;
+    left: 0;
+    width: 30px;
+    height: 30px;
+    background: transparent;
+    border-top-left-radius: 30px;
+    box-shadow: -5px -5px 0 5px var(--clr);
+}
+
+.container-new .card-inactiva .box .icon::after{
+    content: '';
+    position: absolute;
+    right: -30px;
+    top: 0;
+    width: 30px;
+    height: 30px;
+    background: transparent;
+    border-top-left-radius: 30px;
+    box-shadow: -5px -5px 0 5px var(--clr);
+}
+
+.container-new .card-inactiva .box .icon .iconBox{
+    position: absolute;
+    inset: 10px;
+    background: #282828;
+    color: #fff;
+    border-radius: 50%;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 600;
+}
+
+.container-new .card-inactiva .box .icon .iconBox ion-icon{
+    font-size: 4em;
+    color: #fff;
+    --ionicon-stroke-width: 16px;
+}
+
+.container-new .card-inactiva .box .content{
+    position: absolute;
+    top: 150px;
+    text-align: center;
+    padding: 20px;
+}
+
+.container-new .card-inactiva .box .content h3{
+    color: #fff;
+    font-size: 1.35em;
+    text-transform: uppercase;
+    font-weight: 700;
+    letter-spacing: 0.12em;
+}
+
+.container-new .card-inactiva .box .content p{
+    color: #fff;
+    font-size: 0.95em;
+    opacity: 0.75;
+    margin: 0 0 10px;
+}
+
+.container-new .card-inactiva .box .content a{  
+    background: #7c7c7c !important;
+    display: inline-block;
+    padding: 10px 25px;
+    text-decoration: none;
+    color: #333;
+    text-transform: uppercase;
+    font-weight: 600;
+    border-radius: 10px;
+    transition: 0.5s;
+    cursor: no-drop;
+}
+
+.container-new .card-inactiva .box .content a:hover {
+    letter-spacing: 0.25em;
+}
+/*fin inactivo*/
+/*Fin nuevo diseño*/
