--- a/src/app/pages/boards/boards.component.scss
+++ b/src/app/pages/boards/boards.component.scss
@@ -1,7 +1,7 @@
 // VIDEO
 .fondo-video{
   background-color: black;
-  height: 1125px;
+  height: 100vw;
   width: 100%;
   position: absolute;
   margin: -1140px 0 0 0;
@@ -12,7 +12,8 @@
   text-align: center;
   position: absolute;
   width: 100%;
-  margin: -1110px 0px 0px 0;
+  /*margin: -1110px 0px 0px 0;*/
+  top: 20px;
 
   video{
     border-radius: 10px;
