--- a/src/app/pages/preguntas-voto/preguntas-voto.component.scss
+++ b/src/app/pages/preguntas-voto/preguntas-voto.component.scss
@@ -1,9 +1,9 @@
 .fondo-video{
   background-color: black;
-  height: 1125px;
+  height: 100vw;
   width: 100%;
   position: absolute;
-  margin: -1125px 0 0 0;
+  margin: -1140px 0 0 0;
   opacity: 0.9;
 }
 
@@ -11,8 +11,9 @@
   text-align: center;
   position: absolute;
   width: 100%;
-  margin: -1010px 0px 0px 0;
-
+  /*margin: -1010px 0px 0px 0;*/
+  top: 20px;
+  
   video{
     border-radius: 10px;
     -webkit-box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);
