ajuste romper estilos proyect init

--- a/src/app/pages/principal/principal.component.scss
+++ b/src/app/pages/principal/principal.component.scss
@@ -225,24 +225,24 @@
     margin-left: 10px;
   }
 
-  .toolbar {/*
+  /*.toolbar {/*
     left: 0;
     bottom: 0;*/
-    position: fixed;
+    /*position: fixed;
     /*top: 180px;*/
-    right: 60px;
-    height:55px;/*
+    /*right: 60px;
+    /*height:55px;/*
     text-align: center;
     position: fixed;*/
-    width: 100%;
-    background: transparent;/*
+    /*width: 100%;
+    /*background: transparent;/*
     background-color: gold;
     border: 10px solid gray;
     border-bottom: 0;*/
-    color: gray;/*
+    /*color: gray;/*
     font-size: -webkit-xxx-large;*/
-    font-weight: bold;
-  }
+    /*font-weight: bold;
+  }*/
 
   .add-category{
     float: right;
