ajustes contenedor agregar nota dia

--- a/src/app/_metronic/layout2/layout.component.html
+++ b/src/app/_metronic/layout2/layout.component.html
@@ -175,6 +175,8 @@
       name="nota"
       id="agregar_nota"
       ></textarea>
+      
+        <a (click)="buttonNote()" style="margin-top: -10px; width: 100%;" class="btn btn-primary">Enviar</a>
     </div>
   </div>
   <!-- Video -->
