--- a/src/app/pages/config-project-wizzard/proyects.component.html
+++ b/src/app/pages/config-project-wizzard/proyects.component.html
@@ -15,8 +15,7 @@
 											<p class="text-gray-400 fs-4 fw-bold py-7">Click en el botón para iniciar a crear un proyecto.</p>
 											<!--end::Description-->
 											<!--begin::Action-->
-											<a class="btn btn-primary er fs-6 px-8 py-4"
-                                            routerLink="/crafted/pages/wizards/config-project">Crear Proyecto</a>
+											<a class="btn btn-primary er fs-6 px-8 py-4" (click)="createProyect()">Crear Proyecto</a><!--routerLink="/crafted/pages/wizards/config-project"-->
 											<!--end::Action-->
 										</div>
 										<!--end::Heading-->
