--- a/src/app/pages/preguntas/preguntas.component.html
+++ b/src/app/pages/preguntas/preguntas.component.html
@@ -177,6 +177,8 @@
       name="nota"
       id="agregar_nota"
       ></textarea>
+      
+      <a (click)="buttonNote()" style="margin-top: -10px; width: 100%;" class="btn btn-primary">Enviar</a>
     </div>
   </div>
   <!-- Video -->
