--- a/src/app/pages/principal/principal.component.scss
+++ b/src/app/pages/principal/principal.component.scss
@@ -13,7 +13,7 @@
   position: absolute;
   width: 100%;
   /*margin: -1110px 0px 0px 0;*/
-  top: 20px;
+  top: 10%;
 
   video{
     border-radius: 10px;
