--- a/src/app/pages/boards/boards.component.html
+++ b/src/app/pages/boards/boards.component.html
@@ -43,18 +43,19 @@
 
                 <div class="container symbol-group symbol-hover mb-3">
                   <ng-container *ngFor="let usu2 of usuarios_active; let i2 = index;">
-                  <div class="symbol symbol-35px symbol-circle" data-bs-toggle="tooltip" title="{{usu2.nombre}}">
+                  <div class="symbol symbol-35px symbol-circle"  style="margin-right:10px;" data-bs-toggle="tooltip" title="{{usu2.nombre}}">
                       <span [ngClass]="usu2.active ? 'symbol-label bg-primary text-inverse-primary fw-bold' : 'symbol-label bg-gray text-inverse-gray fw-bold'">{{usu2.nombre.substring(0, 1).toUpperCase()}}</span>
                   </div>
-                  <span class="symbol-label fw-bold" style="color: #fff;">{{usu2.nombre}}</span>
+                  <span class="symbol-label fw-bold" style="color: #fff;margin-right:20px;">{{usu2.nombre}}</span>
                   </ng-container>
                 </div>
                 
               <div class="mb-3" style="
-              margin-left: 584px;
+              margin-left: 460px;
               float: left;
+              text-align: center;
               position: absolute;
-              "><h1 style="color: #fff;">Entender</h1></div>
+              "><h1 style="color: #fff;">Entender<br>Paso 2 – Categorización de Notas</h1></div>
 
                 <!-- Timer -->
                 <div class="mb-3">
@@ -160,7 +161,7 @@
           </div>
         </div>-->
             <!--<div style="width: 100%; height: 600px;overflow: auto;background-color: #fff; position: relative;padding: 20px;">-->
-              <div class="toolbar" id="toolbar" tabindex="0" style="position:static !important">
+              <div class="toolbar" id="toolbar" tabindex="0" style="position:static !important; background-color: transparent;">
             <!--<input name="category" #category type="text"/>-->
                 <a class="add-category material-icons" (click)="addCategory()" >
                   Agregar Categoria
@@ -176,7 +177,7 @@
                         <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
                       </svg></span>
                   </div>
-                  <h2 style="color: #fff;text-transform: capitalize;line-height: 2;" onkeypress="return (this.innerText.length <= 20)" contenteditable="true" data-max-length="20" (blur)="onFocusOut($event, i)" *ngIf="i > 0">{{t.title}}</h2><!-- 
+                  <h2 style="color: #fff;text-transform: capitalize;line-height: 2;" onkeypress="return (this.innerText.length <= 20)" contenteditable="true" data-max-length="20" (focus)="onFocusIn(i)" (blur)="onFocusOut($event, i)" *ngIf="i > 0">{{t.title}}<span class="edit-icon" *ngIf="focusIn != i">✏️</span></h2><!-- 
                     (keyup)="onKey($event); $event.preventDefault(); $event.stopPropagation()"-->
                   <h2 style="color: #fff;text-transform: capitalize;" *ngIf="i == 0">{{t.title}}</h2>
                   
@@ -202,7 +203,7 @@
     </div>
     <div class="video-container">
       <video controls id="myVideo" [ngClass]="showVideoFlag ? videoOn : videoOff" src="http://res.cloudinary.com/tresideambipi/video/upload/v1659722491/videos/video_test_clgg4o.mp4" width="1200" height="500px"></video>
-      <h1 style="margin-top: 30px;color: #fff;">Día 1 – Paso 2 – Categorización de Notas</h1>
+      <h1 style="margin-top: 30px;color: #fff;" *ngIf="showVideoFlag">Día 1 – Paso 2 – Categorización de Notas</h1>
     </div>
   <!--begin::Highlight-->
   <div style="background-color: #03A588;position: fixed; bottom: 0px;width: 100%; height: 80px;">
