--- a/src/app/pages/preguntas-voto/preguntas-voto.component.scss
+++ b/src/app/pages/preguntas-voto/preguntas-voto.component.scss
@@ -12,7 +12,7 @@
   position: absolute;
   width: 100%;
   /*margin: -1010px 0px 0px 0;*/
-  top: 20px;
+  top: 10%;
   
   video{
     border-radius: 10px;
