--- a/src/app/pages/preguntas/preguntas.component.html
+++ b/src/app/pages/preguntas/preguntas.component.html
@@ -43,20 +43,21 @@
 
               <div class="container symbol-group symbol-hover mb-3">
                 <ng-container *ngFor="let usu2 of usuarios_active; let i2 = index;">
-                <div class="symbol symbol-35px symbol-circle" data-bs-toggle="tooltip" title="{{usu2.nombre}}">
+                <div class="symbol symbol-35px symbol-circle"  style="margin-right:10px;" data-bs-toggle="tooltip" title="{{usu2.nombre}}">
                     <span [ngClass]="usu2.active ? 'symbol-label bg-primary text-inverse-primary fw-bold' : 'symbol-label bg-gray text-inverse-gray fw-bold'">{{usu2.nombre.substring(0, 1).toUpperCase()}}</span>
                 </div>
                 
-                <span class="symbol-label fw-bold" style="color: #fff;">{{usu2.nombre}}</span>
+                <span class="symbol-label fw-bold" style="color: #fff;margin-right:20px;">{{usu2.nombre}}</span>
 
                 </ng-container>
               </div>
               
               <div class="mb-3" style="
-              margin-left: 584px;
+              margin-left: 460px;
               float: left;
+              text-align: center;
               position: absolute;
-              "><h1 style="color: #fff;">Entender</h1></div>
+              "><h1 style="color: #fff;">Entender<br>Paso 6 – Preguntas del sprint</h1></div>
 
               <!-- Timer -->
               <div class="mb-3">
@@ -188,7 +189,7 @@
   <!-- Video Container -->
   <div class="video-container">
     <video controls id="myVideo" [ngClass]="showVideoFlag ? videoOn : videoOff" src="http://res.cloudinary.com/tresideambipi/video/upload/v1659722491/videos/video_test_clgg4o.mp4" width="1200" height="500px"></video>
-    <h1 style="margin-top: 30px;color: #fff;">Día 1 – Paso 6 – Preguntas del sprint</h1>
+    <h1 style="margin-top: 30px;color: #fff;" *ngIf="showVideoFlag">Día 1 – Paso 6 – Preguntas del sprint</h1>
   </div>
   	<!--begin::Bottom Toolbar-->
   <div style="background-color: #03A588;position: fixed; bottom: 0px;width: 100%; height: 80px;">
