--- a/src/app/pages/boards/boards.component.scss
+++ b/src/app/pages/boards/boards.component.scss
@@ -20,7 +20,8 @@
 
 .tablero-container{
   min-width: 100%;
-  min-height: 600px;
+  //min-height: 600px;
+  min-height: 60%;
   overflow: auto;
   background-color: #232323;
   position: relative;
