--- a/src/app/pages/estructura/estructura.component.scss
+++ b/src/app/pages/estructura/estructura.component.scss
@@ -107,14 +107,14 @@
 
 .toolbar-notas {/*
   left: 0;
-  bottom: 0;*//*
-  position: fixed;*/
-  position: absolute;
+  bottom: 0;*/
+  position: fixed;
+  //position: absolute;
   //top: 180px;
-  top: 40%;
-  right: 25%;
-  left: 25%;
-  margin: auto;
+  top: 60%;
+  //right: 25%;
+  left: 50%;
+  //margin: auto;
   //right: 60px;
   height:155px;/*
   text-align: center;
@@ -127,6 +127,7 @@
   color: gray;
   font-size: -webkit-xxx-large;
   font-weight: bold;
+  transform: translate(-50%, -50%);
 }
 
 .add{
