--- a/src/app/pages/mapa/mapa.component.scss
+++ b/src/app/pages/mapa/mapa.component.scss
@@ -1,6 +1,7 @@
 .tablero-container{
   min-width: 100%;
-  min-height: 520px;
+  //min-height: 520px;
+  min-height: 60%;
   overflow: auto;
   background-color: #232323;
   position: relative;
