--- a/src/app/pages/metas-voto/metas-voto.component.scss
+++ b/src/app/pages/metas-voto/metas-voto.component.scss
@@ -60,7 +60,8 @@
 
 .tablero-container{
   min-width: 100%;
-  height: 600px;
+  //height: 600px;
+  min-height: 60%;
   overflow: auto;
   background-color: #232323;
   position: relative;
