--- a/src/app/pages/objetivos-corto-decision/objetivos-corto-decision.component.scss
+++ b/src/app/pages/objetivos-corto-decision/objetivos-corto-decision.component.scss
@@ -42,7 +42,8 @@
 
 .tablero-container{
   min-width: 100%;
-  min-height: 520px;
+  //min-height: 520px;
+  min-height: 60%;
   overflow: auto;
   background-color: #232323;
   position: relative;
