--- a/src/app/_metronic/layout2/header/header.component.html
+++ b/src/app/_metronic/layout2/header/header.component.html
@@ -45,10 +45,11 @@
               </ng-container>
             </div>
             
-            <div class="mb-3" style="/* margin-left: 620px; *//* float: left; */text-align: center;/* position: fixed; */margin: auto;align-items: center;align-content: center;align-self: center;/* display: contents; */
-        ">
-        <h1 style="color: #fff;">{{titulo}}<br>{{paso}}</h1>
-        </div>
+            <div class="mb-6 mt-8" style="/* margin-left: 620px; *//* float: left; */text-align: center;/* position: fixed; */margin: auto;align-items: center;align-content: center;align-self: center;/* display: contents; */
+            ">
+              <h1 style="color: #fff;">{{titulo}}<br>{{paso}}</h1>
+              <button class="btn btn-sm btn-primary" (click)="openModal()">Instrucciones</button>
+            </div>
 
             <!-- Timer container align-items-center   style="width: 300px;padding: 0;margin: auto;"-->
             <div class="mb-3">
@@ -130,3 +131,23 @@
   <!--end::Curve bottom-->
 </div>
 <!--end::Header Section-->
+<div *ngIf="showModal" class="modal">
+  <div class="modal-content">
+    <h1>Instrucciones</h1>
+  <ul>
+    <li>
+      Instrucción 1
+    </li>
+    <li>
+      Instrucción 2
+    </li>
+    <li>
+      Instrucción 3
+    </li>
+    <li>
+      Instrucción 4
+    </li>
+  </ul>
+    <button class="btn btn-danger" style="width: 20%;" (click)="closeModal()">Cerrar</button>
+  </div>
+</div>
